--- a/deployment.yaml
+++ b/deployment.yaml
@@ -19,8 +19,11 @@ spec:
           ports:
             - containerPort: 80
           env:
-            - name: REACT_APP_BACKEND_URL
-              value: "127.0.0.1:5000"
+            - name: BACKEND_API_URL
+              valueFrom:
+                secretKeyRef:
+                  name: backend-api-secrets
+                  key: BACKEND_API_URL
             - name: GOOGLE_APPLICATION_CREDENTIALS
               value: "access_key.json"
       imagePullSecrets:
