--- a/deployment.yaml
+++ b/deployment.yaml
@@ -19,11 +19,11 @@ spec:
           ports:
             - containerPort: 80
           env:
-            - name: BACKEND_API_URL
+            - name: REACT_APP_BACKEND_URL
               valueFrom:
                 secretKeyRef:
                   name: backend-api-secrets
-                  key: BACKEND_API_URL
+                  key: REACT_APP_BACKEND_URL
             - name: GOOGLE_APPLICATION_CREDENTIALS
               value: "access_key.json"
       imagePullSecrets:
