--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,9 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-app
-  namespace: default
+  namespace: ica4frontend
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: frontend-app
@@ -21,10 +21,14 @@ spec:
           env:
             - name: REACT_APP_BACKEND_URL
               valueFrom:
-                secretKeyRef:
-                  name: backend-api-secrets
+                configMapKeyRef:
+                  name: frontend-app-config
                   key: REACT_APP_BACKEND_URL
             - name: GOOGLE_APPLICATION_CREDENTIALS
-              value: "access_key.json"
+              valueFrom:
+                configMapKeyRef:
+                  name: frontend-app-config
+                  key: GOOGLE_APPLICATION_CREDENTIALS
       imagePullSecrets:
         - name: gcr-json-key
+
