--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -35,7 +35,7 @@ jobs:
 
 
       # Step 5: Push Docker image to GCR
-      - - name: Authenticate Docker with GCR
+      - name: Authenticate Docker with GCR
         run: |
           echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" > /tmp/key.json
           docker login -u _json_key --password-stdin https://gcr.io < /tmp/key.json
