--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -30,20 +30,17 @@ jobs:
       # Step 4: Build Docker image
       - name: Build Docker image
         run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/backendapp:latest -f Dockerfile .
+          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/frontdapp:latest -f Dockerfile .
 
 
-      # Step 5: Push Docker image to GCR
-      #echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" > /tmp/key.json
-      #gcloud auth activate-service-account --key-file=/tmp/key.json
-      
+      # Step 5: Push Docker image to GCR      
       - name: Authenticate Docker with GCR
         run: |
           gcloud auth configure-docker gcr.io
 
       - name: Push Docker image
         run: |
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/backendapp:latest
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/frontendapp:latest
 
       # Step 6: Apply Kubernetes ConfigMap
       - name: Authenticate and Configure kubectl
@@ -59,7 +56,12 @@ jobs:
         run: |
           kubectl apply -f ./k8s/deployment.yaml --namespace=ica4frontend
 
-      # Step 8: Verify Deployment
+      # Step 8: Apply Kubernetes Deployment
+      - name: Apply Deployment
+        run: |
+          kubectl apply -f ./k8s/service.yaml --namespace=ica4frontend
+
+      # Step 9: Verify Deployment
       - name: Verify Deployment
         run: |
-          kubectl rollout status deployment/backendapp --namespace=ica4frontend
+          kubectl rollout status deployment/frontendapp --namespace=ica4frontend
