--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: frontend-app-config
+  name: frontendapp-config
   namespace: ica4frontend
 data:
   REACT_APP_BACKEND_URL: "http://backend-service.ica4backend.svc.cluster.local"
